[package]
name = "tokio-fluent-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
rmp-serde = "0.15"
serde = "1"
thiserror = "1"
tokio = { version = "1", features = ["net", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
