[package]
name = "tokio-fluent-logger"
version = "0.1.0"
edition = "2021"
description = "A structured event logger for Fluentd based on Tokio runtime"
readme = "README.md"
repository = "https://github.com/eagletmt/tokio-fluent-logger"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
rmp-serde = "0.15"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["io-util", "net", "sync", "time"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
